# avcpp

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  build.sh  conanfile.py
av/: CMakeLists.txt  _iocontext.cpp  av.cfg  averrc.cpp  averrc.h  codec.cpp  codec.h  constant.cpp  constant.h  dynamicrange.cpp  format.cpp  format.h  frame.cpp  frame.h  metadata.cpp  metadata.h  option.cpp  option.h  packet.cpp  packet.h  resample.cpp  resample.h
cmake/: FindSDL2.cmake
samples/: CMakeLists.txt  decode.cpp  decode_audio.cpp  encode.cpp  encode_audio.cpp  metadata.cpp  play.cpp  play_ao.cpp  resample.cpp  transcode_aac.cpp
test/: CMakeLists.txt  averrctest.cpp  codectest.cpp  formattest.cpp  metadatatest.cpp  optionstest.cpp  resampletest.cpp  streamtest.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
